# runner

./: README.md  __main__.py  pyproject.toml
libs/: types.py
plugins/: reverse_string.py
src/runner/: __init__.py  __main__.py
src/runner/libs/: core.py  types.py  utils.py
src/runner/libs_gl/: types.py  utils.py
src/runner/libs_ui/: core.py
src/runner/plugin_libs/: types.py
src/runner/plugins/: cube_simple.glsl  display_image.py  get_input_files.py  imgui_image.py  make_image.py  result_handler.py  reverse_string.py  sub_module1.py  sub_module2.py
