[project]
name = "runner"
version = "0.1.0"
description = ""
authors = [
    {name = "poopipe",email = "69435015+poopipe@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "runner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
