[project]
name = "runner"
version = "0.1.0"
description = ""
authors = [
    {name = "poopipe",email = "a@A.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "multipledispatch (>=0.2,<0.3)",
    "moderngl (>=5.12.0,<6.0.0)",
    "imgui-bundle (==1.6.3)"
]

[tool.poetry]
packages = [{include = "runner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
